--- a/index.html
+++ b/index.html
@@ -103,6 +103,42 @@
     .member-info { font-size: 14px; }
     .member-info strong { font-size: 16px; color: #0b3d91; }
 
+    /* --- Schedule Poster --- */
+    .poster-wrap {
+      display: flex;
+      justify-content: center;
+    }
+
+    .poster-card {
+      background: var(--card);
+      border: 1px solid #e8ecf5;
+      border-radius: 14px;
+      padding: 16px;
+      max-width: 420px;          /* 适合“细长”海报 */
+      width: 100%;
+    }
+
+    .poster-card img {
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      display: block;
+    }
+
+    .poster-caption {
+      text-align: center;
+      margin-top: 10px;
+      font-size: 14px;
+      color: var(--muted);
+    }
+
+    @media (max-width: 640px) {
+      .poster-card {
+        max-width: 100%;         /* 手机端全宽 */
+        padding: 12px;
+      }
+    }
+    
     /* Logos */
     .logo-section { display:flex; justify-content:center; align-items:center; flex-wrap:wrap; gap:30px; margin:0px 0 10px; }
     .logo-section img { height:160px; max-width:200px; object-fit:contain; transition: transform 0.2s ease; }
@@ -147,6 +183,23 @@
           ➜ Submission Site
         </a>
         <a class="cta" href="https://aaai.org/conference/aaai/aaai-26/registration/" target="_blank">➜ AAAI-26 Registration</a>
+      </div>
+    </section>
+
+    <section id="schedule-poster">
+      <div class="container">
+        <h2 style="text-align:center;">Conference Schedule</h2>
+
+        <div class="poster-wrap">
+          <div class="poster-card">
+            <a href="./assets/poster.png" target="_blank" rel="noopener">
+              <img src="./assets/poster.png" alt="AI-LAW @ AAAI 2026 Schedule Poster">
+            </a>
+            <div class="poster-caption">
+              Click to view the full schedule poster
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
