--- a/CFP.html
+++ b/CFP.html
@@ -106,6 +106,7 @@
         <a href="./index.html">Home</a>
         <a href="./program.html">Schedule</a>
         <a href="./papers.html">Accepted Papers</a>
+        <a href="./awards.html">Awards</a>
         <a href="./CFP.html" class="active">CFP</a>
       </nav>
     </div>
