--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
         <a href="./index.html" class="active">Home</a>
         <a href="./program.html">Schedule</a>
         <a href="./papers.html">Accepted Papers</a>
+        <a href="./awards.html">Awards</a>
         <a href="./CFP.html">CFP</a>
       </nav>
     </div>
