--- a/papers.html
+++ b/papers.html
@@ -112,6 +112,7 @@
         <a href="./index.html">Home</a>
         <a href="./program.html">Schedule</a>
         <a href="./papers.html" class="active">Accepted Papers</a>
+        <a href="./awards.html">Awards</a>
         <a href="./CFP.html">CFP</a>
       </nav>
     </div>
