--- a/program.html
+++ b/program.html
@@ -118,6 +118,7 @@
         <a href="./index.html">Home</a>
         <a href="./program.html" class="active">Schedule</a>
         <a href="./papers.html">Accepted Papers</a>
+        <a href="./awards.html">Awards</a>
         <a href="./CFP.html">CFP</a>
       </nav>
     </div>
